Replace old event api code with new query v2 getEventLogs