@@ -1,6 +1,7 @@
 package org.qubic.qx.sync.job;
 
 import at.qubic.api.crypto.IdentityUtil;
+import at.qubic.api.domain.event.EventType;
 import io.micrometer.core.instrument.util.IOUtils;
 import org.apache.commons.lang3.Strings;
 import org.junit.jupiter.api.Test;
@@ -17,45 +18,81 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 class EventsProcessorIT {
 
-    private final IdentityUtil identityUtil = new IdentityUtil();
-    private final EventsProcessor processor = new EventsProcessor(identityUtil);
+    private final EventsProcessor processor = new EventsProcessor();
 
     /*
+
+        Real life trade with the following event data (qu transfers are irrelevant in our calculation):
+
+        base64 event data: AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADRUZs2Kwb9agInfWU1OpJyeu1ZsX5m7AtiotAmSikm/T9/lSMAAAAA
         Qu transfer: from [BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARMID] to [BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC]: [596999999]
+
         base64 event data: 0VGbNisG/WoCJ31lNTqScnrtWbF+ZuwLYqLQJkopJv3RUZs2Kwb9agInfWU1OpJyeu1ZsX5m7AtiotAmSikm/QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAABNTE0AAAAAAAAAAAAAAAA=
         Asset ownership change: [AAAAAAAAAA]/[MLM] from [BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC] to [BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC]. Number of shares: [1]
+
         base64 event data: 0VGbNisG/WoCJ31lNTqScnrtWbF+ZuwLYqLQJkopJv3RUZs2Kwb9agInfWU1OpJyeu1ZsX5m7AtiotAmSikm/QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAABNTE0AAAAAAAAAAAAAAAA=
         Asset possession change: [AAAAAAAAAA]/[MLM] from [BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC] to [BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC]. Number of shares: [1]
+
         base64 event data: AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1MTQAAAAAAAEbDIwAAAAABAAAAAAAAAA==
         Qx trade: Asset [AAAAAAAAAA]/[MLM], price: [600000000], shares [1].
+
         base64 event data: AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADRUZs2Kwb9agInfWU1OpJyeu1ZsX5m7AtiotAmSikm/cB/3AsAAAAA
         Qu transfer: from [BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARMID] to [BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC]: [199000000]
+
         base64 event data: 0VGbNisG/WoCJ31lNTqScnrtWbF+ZuwLYqLQJkopJv02EYTUnxm1rKM15TYeDdxsn6lv0WHZd47t7Tzvs+MeIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAABNTE0AAAAAAAAAAAAAAAA=
         Asset ownership change: [AAAAAAAAAA]/[MLM] from [BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC] to [UBGIZFTLNCRKAFJBIUUYWTOMEFEDVPTZZZBKNSZODERUXBJPWQZSPGYAMCYH]. Number of shares: [1]
+
         base64 event data: 0VGbNisG/WoCJ31lNTqScnrtWbF+ZuwLYqLQJkopJv02EYTUnxm1rKM15TYeDdxsn6lv0WHZd47t7Tzvs+MeIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAABNTE0AAAAAAAAAAAAAAAA=
         Asset possession change: [AAAAAAAAAA]/[MLM] from [BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC] to [UBGIZFTLNCRKAFJBIUUYWTOMEFEDVPTZZZBKNSZODERUXBJPWQZSPGYAMCYH]. Number of shares: [1]
+
         base64 event data: AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1MTQAAAAAAAcLrCwAAAAABAAAAAAAAAA==
         Qx trade: Asset [AAAAAAAAAA]/[MLM], price: [200000001], shares [1].
      */
     @Test
     void calculateTrades() {
 
-        String responseJson = IOUtils.toString(Objects.requireNonNull(getClass().getResourceAsStream(
-                "/testdata/il/get-tick-events-1-response.json"
-        )), StandardCharsets.UTF_8);
-
         String transactionHash = "yakukpaxladuwfcwfndwanqjynxaihgoldglsclmkekbvdurbtddkgrcbxng";
-        String sourceId = "BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC";
+        String seller = "BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC";
         String destinationId = "BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARMID";
         String issuer = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFXIB";
-        QxAssetOrderData orderData = new QxAssetOrderData(issuer, "MLM", 1, 2);
+        String assetName = "MLM";
+        QxAssetOrderData orderData = new QxAssetOrderData(issuer, assetName, 1, 2);
         Transaction tx = new Transaction(transactionHash,
-                sourceId,
+                seller,
                 destinationId, 1, 16585576,5, 0,
                 orderData
         );
-        List<TransactionEvents> transactionEventList = Arrays.asList(JsonUtil.fromJson(responseJson, TransactionEvents[].class));
-        List<TransactionEvent> events = transactionEventList.stream().filter(te -> Strings.CS.equals(te.txId(), transactionHash)).findAny().orElseThrow().events();
+
+        String buyer1 = "BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC";
+        String buyer2 = "UBGIZFTLNCRKAFJBIUUYWTOMEFEDVPTZZZBKNSZODERUXBJPWQZSPGYAMCYH";
+
+        List<TransactionEvent> events = List.of(
+                TransactionEvent.builder()
+                        .transactionHash(transactionHash)
+                        .eventType(2)
+                        .assetOwnershipChange(new AssetOwnershipChange(seller, buyer1, issuer, assetName, 1))
+                        .build(),
+
+                TransactionEvent.builder()
+                        .transactionHash(transactionHash)
+                        .eventType(6)
+                        .eventData("AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1MTQAAAAAAAEbDIwAAAAABAAAAAAAAAA==")
+                        .smartContractMessage(new SmartContractEvent(1, 0))
+                        .build(),
+
+                TransactionEvent.builder()
+                        .transactionHash(transactionHash)
+                        .eventType(2)
+                        .assetOwnershipChange(new AssetOwnershipChange(seller, buyer2, issuer, assetName, 1))
+                        .build(),
+
+                TransactionEvent.builder()
+                        .transactionHash(transactionHash)
+                        .eventType(6)
+                        .eventData("AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1MTQAAAAAAAcLrCwAAAAABAAAAAAAAAA==")
+                        .smartContractMessage(new SmartContractEvent(1, 0))
+                        .build()
+        );
         TransactionWithMeta transaction = TransactionWithMeta.builder().transaction(tx).events(events).time(Instant.EPOCH).build();
 
         List<Trade> trades = processor.calculateTrades(transaction, orderData);
@@ -69,8 +106,8 @@ class EventsProcessorIT {
 
         assertThat(trade1.price()).isEqualTo(600_000_000);
         assertThat(trade1.numberOfShares()).isEqualTo(1);
-        assertThat(trade1.taker()).isEqualTo(sourceId);
-        assertThat(trade1.maker()).isEqualTo("BOJOBRHAZILUCDADNGBXYUIYHNIDCKBSQEWGUFCAJASIOPFNBMWWXDJHCCTC");
+        assertThat(trade1.taker()).isEqualTo(seller);
+        assertThat(trade1.maker()).isEqualTo(buyer1);
         assertThat(trade1.issuer()).isEqualTo(issuer);
         assertThat(trade1.assetName()).isEqualTo("MLM");
 
@@ -81,8 +118,8 @@ class EventsProcessorIT {
 
         assertThat(trade2.price()).isEqualTo(200_000_001); // encoded in trade event
         assertThat(trade2.numberOfShares()).isEqualTo(1); // encoded in trade event
-        assertThat(trade2.taker()).isEqualTo(sourceId);
-        assertThat(trade2.maker()).isEqualTo("UBGIZFTLNCRKAFJBIUUYWTOMEFEDVPTZZZBKNSZODERUXBJPWQZSPGYAMCYH");
+        assertThat(trade2.taker()).isEqualTo(seller);
+        assertThat(trade2.maker()).isEqualTo(buyer2);
         assertThat(trade2.issuer()).isEqualTo(issuer);
         assertThat(trade2.assetName()).isEqualTo("MLM");
     }
